<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.face</groupId>
  <artifactId>faceBDD</artifactId>
  <version>0.0.1-SNAPSHOT</version>

  
    <packaging>jar</packaging>
      <name>faceBDD</name>
  <url>http://maven.apache.org</url>
  
  
  
      <build>
        <plugins>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>2.6</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
    		<groupId>org.apache.maven.plugins</groupId>
   			 <artifactId>maven-surefire-plugin</artifactId>
    		<version>2.20.1</version>
    		<configuration>
    		<parallel>classes</parallel>
    		<forkMode>perthread</forkMode>
        		<threadCount>1</threadCount>
		        <reuseForks>true</reuseForks>
        		<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
     		<includes>
     			<include>**/TestRunner.java</include>
     	     </includes>
         </configuration>
  </plugin>
         </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency>
      <groupId>com.vimalselvam</groupId>
      <artifactId>cucumber-extentsreport</artifactId>
      <version>1.1.1</version>
    </dependency>
        <dependency>
            <groupId>info.cukes</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>1.2.5</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>3.4.0</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-all</artifactId>
            <version>1.3</version>
        </dependency>
      
         </dependencies>
   
</project>